Fix open api and route names
