# routes/web.php
@@ -14,8 +14,8 @@
 Route::get('/', 'StaticPagesController@home')->name('home');
 
 // Users
-Route::middleware('auth')->post('users/checkout', 'CartController@checkout')->name('checkout')->middleware(['auth', 'is.shopper']);
-Route::middleware('auth')->get('users/checkout', 'CartController@checkoutPage')->name('checkout-page')->middleware(['auth','is.shopper']);
+Route::middleware(['auth', 'is.shopper'])->post('users/checkout', 'CartController@checkout')->name('checkout');
+Route::middleware('auth')->get('users/checkout', 'CartController@checkoutPage')->name('checkout-page');
 Route::middleware('auth')->get('users', 'UserController@getAuthProfile')->name('getUsersPage');
 Route::middleware('auth')->get('users/cart', 'CartController@show')->name('getCart');
 Route::middleware('auth')->get('users/orders', 'ShopperController@getOrders')->name('getOrders');
@@ -29,7 +29,7 @@ Route::get('admin', 'AdminController@getDashboard')->name('getDashboard');
 Route::get('admin/orders', 'AdminController@getOrderDashboard')->name('getOrderDashboard');
 Route::get('admin/users', 'AdminController@getUserDashboard')->name('getUserDashboard');
 Route::get('admin/create', 'AdminController@getNewAdminPage')->name('getNewAdminPage');
-Route::post('admin/register', 'AdminController@registerAdmin')->name('registerAdmin');
+Route::post('admin/create', 'AdminController@registerAdmin')->name('registerAdmin');
 
 
 // Products
@@ -44,4 +44,3 @@ Route::get('join', 'Auth\JoinController@show')->name('join')->middleware('guest'
 Route::post('login', 'Auth\LoginController@login')->name('login');
 Route::post('logout', 'Auth\LoginController@logout')->name('logout');
 Route::post('register', 'Auth\RegisterController@register')->name('register');
-
